OGP_Asteroids/src/asteroids/model/programs/parsing/AsteroidsParserParser.java
// Generated from C:\Antlr\AsteroidsParser.g4 by ANTLR 4.0
 package asteroids.model.programs.parsing; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AsteroidsParserParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELF=1, TRUE=2, FALSE=3, NULL=4, BOOL=5, DOUBLE=6, ENTITY=7, VOID=8, SHIP=9, 
		ASTEROID=10, BULLET=11, ANY=12, GETRADIUS=13, GETX=14, GETY=15, GETVX=16, 
		GETVY=17, GETDIR=18, SQRT=19, SIN=20, COS=21, NOT=22, THRUSTON=23, THRUSTOFF=24, 
		TURN=25, FIRE=26, SKIP=27, PRINT=28, IF=29, THEN=30, ELSE=31, WHILE=32, 
		DO=33, FOREACH=34, ASSIGN=35, MUL=36, DIV=37, ADD=38, SUB=39, EQ=40, NEQ=41, 
		LT=42, GT=43, LEQ=44, GEQ=45, AND=46, OR=47, NUMBER=48, FLOAT=49, INTEGER=50, 
		IDENTIFIER=51, LEFT_PAREN=52, RIGHT_PAREN=53, LEFT_BRACE=54, RIGHT_BRACE=55, 
		SEMICOLON=56, COMMA=57, WHITESPACE=58, SINGLE_COMMENT=59;
	public static final String[] tokenNames = {
		"<INVALID>", "'self'", "'true'", "'false'", "'null'", "'bool'", "'double'", 
		"'entity'", "'void'", "'ship'", "'asteroid'", "'bullet'", "'any'", "'getradius'", 
		"'getx'", "'gety'", "'getvx'", "'getvy'", "'getdir'", "'sqrt'", "'sin'", 
		"'cos'", "'!'", "'thrust'", "'thrust_off'", "'turn'", "'fire'", "'skip'", 
		"'print'", "'if'", "'then'", "'else'", "'while'", "'do'", "'foreach'", 
		"':='", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'&&'", "'||'", "NUMBER", "FLOAT", "INTEGER", "IDENTIFIER", "'('", 
		"')'", "'{'", "'}'", "';'", "','", "WHITESPACE", "SINGLE_COMMENT"
	};
	public static final int
		RULE_eval = 0, RULE_decl = 1, RULE_action = 2, RULE_unop = 3, RULE_ctrl = 4, 
		RULE_ifthenelse = 5, RULE_whiledo = 6, RULE_foreach = 7, RULE_assign = 8, 
		RULE_functioncall = 9, RULE_function = 10, RULE_expr = 11, RULE_namedconst = 12, 
		RULE_type = 13, RULE_entityspec = 14, RULE_binop = 15;
	public static final String[] ruleNames = {
		"eval", "decl", "action", "unop", "ctrl", "ifthenelse", "whiledo", "foreach", 
		"assign", "functioncall", "function", "expr", "namedconst", "type", "entityspec", 
		"binop"
	};

	@Override
	public String getGrammarFileName() { return "AsteroidsParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }




	public AsteroidsParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvalContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(AsteroidsParserParser.SEMICOLON, 0); }
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(AsteroidsParserParser.PRINT, 0); }
		public CtrlContext ctrl() {
			return getRuleContext(CtrlContext.class,0);
		}
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public EvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterEval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitEval(this);
		}
	}

	public final EvalContext eval() throws RecognitionException {
		EvalContext _localctx = new EvalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_eval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << DOUBLE) | (1L << ENTITY) | (1L << VOID) | (1L << THRUSTON) | (1L << THRUSTOFF) | (1L << TURN) | (1L << FIRE) | (1L << SKIP) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << IDENTIFIER) | (1L << SEMICOLON))) != 0)) {
				{
				setState(47);
				switch (_input.LA(1)) {
				case BOOL:
				case DOUBLE:
				case ENTITY:
				case VOID:
					{
					setState(32); decl();
					setState(33); match(SEMICOLON);
					}
					break;
				case THRUSTON:
				case THRUSTOFF:
				case TURN:
				case FIRE:
				case SKIP:
					{
					setState(35); action();
					setState(36); match(SEMICOLON);
					}
					break;
				case IDENTIFIER:
					{
					setState(38); assign();
					setState(39); match(SEMICOLON);
					}
					break;
				case PRINT:
					{
					setState(41); match(PRINT);
					setState(42); expr(0);
					setState(43); match(SEMICOLON);
					}
					break;
				case IF:
				case WHILE:
				case FOREACH:
					{
					setState(45); ctrl();
					}
					break;
				case SEMICOLON:
					{
					setState(46); match(SEMICOLON);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(50);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(49); eval();
					}
					break;
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(AsteroidsParserParser.ASSIGN, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); type();
			setState(55); match(IDENTIFIER);
			setState(58);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(56); match(ASSIGN);
				setState(57); expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public TerminalNode FIRE() { return getToken(AsteroidsParserParser.FIRE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode TURN() { return getToken(AsteroidsParserParser.TURN, 0); }
		public TerminalNode THRUSTOFF() { return getToken(AsteroidsParserParser.THRUSTOFF, 0); }
		public TerminalNode THRUSTON() { return getToken(AsteroidsParserParser.THRUSTON, 0); }
		public TerminalNode SKIP() { return getToken(AsteroidsParserParser.SKIP, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_action);
		try {
			setState(66);
			switch (_input.LA(1)) {
			case THRUSTON:
				enterOuterAlt(_localctx, 1);
				{
				setState(60); match(THRUSTON);
				}
				break;
			case THRUSTOFF:
				enterOuterAlt(_localctx, 2);
				{
				setState(61); match(THRUSTOFF);
				}
				break;
			case TURN:
				enterOuterAlt(_localctx, 3);
				{
				setState(62); match(TURN);
				setState(63); expr(0);
				}
				break;
			case FIRE:
				enterOuterAlt(_localctx, 4);
				{
				setState(64); match(FIRE);
				}
				break;
			case SKIP:
				enterOuterAlt(_localctx, 5);
				{
				setState(65); match(SKIP);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnopContext extends ParserRuleContext {
		public TerminalNode GETVY() { return getToken(AsteroidsParserParser.GETVY, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(AsteroidsParserParser.LEFT_PAREN, 0); }
		public TerminalNode GETVX() { return getToken(AsteroidsParserParser.GETVX, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AsteroidsParserParser.RIGHT_PAREN, 0); }
		public TerminalNode NOT() { return getToken(AsteroidsParserParser.NOT, 0); }
		public TerminalNode SIN() { return getToken(AsteroidsParserParser.SIN, 0); }
		public TerminalNode SQRT() { return getToken(AsteroidsParserParser.SQRT, 0); }
		public TerminalNode GETRADIUS() { return getToken(AsteroidsParserParser.GETRADIUS, 0); }
		public TerminalNode GETY() { return getToken(AsteroidsParserParser.GETY, 0); }
		public TerminalNode GETX() { return getToken(AsteroidsParserParser.GETX, 0); }
		public TerminalNode COS() { return getToken(AsteroidsParserParser.COS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterUnop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitUnop(this);
		}
	}

	public final UnopContext unop() throws RecognitionException {
		UnopContext _localctx = new UnopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unop);
		try {
			setState(95);
			switch (_input.LA(1)) {
			case GETRADIUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); match(GETRADIUS);
				setState(69); expr(0);
				}
				break;
			case GETX:
				enterOuterAlt(_localctx, 2);
				{
				setState(70); match(GETX);
				setState(71); expr(0);
				}
				break;
			case GETY:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); match(GETY);
				setState(73); expr(0);
				}
				break;
			case GETVX:
				enterOuterAlt(_localctx, 4);
				{
				setState(74); match(GETVX);
				setState(75); expr(0);
				}
				break;
			case GETVY:
				enterOuterAlt(_localctx, 5);
				{
				setState(76); match(GETVY);
				setState(77); expr(0);
				}
				break;
			case SQRT:
				enterOuterAlt(_localctx, 6);
				{
				setState(78); match(SQRT);
				setState(79); match(LEFT_PAREN);
				setState(80); expr(0);
				setState(81); match(RIGHT_PAREN);
				}
				break;
			case SIN:
				enterOuterAlt(_localctx, 7);
				{
				setState(83); match(SIN);
				setState(84); match(LEFT_PAREN);
				setState(85); expr(0);
				setState(86); match(RIGHT_PAREN);
				}
				break;
			case COS:
				enterOuterAlt(_localctx, 8);
				{
				setState(88); match(COS);
				setState(89); match(LEFT_PAREN);
				setState(90); expr(0);
				setState(91); match(RIGHT_PAREN);
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 9);
				{
				setState(93); match(NOT);
				setState(94); expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtrlContext extends ParserRuleContext {
		public ForeachContext foreach() {
			return getRuleContext(ForeachContext.class,0);
		}
		public WhiledoContext whiledo() {
			return getRuleContext(WhiledoContext.class,0);
		}
		public IfthenelseContext ifthenelse() {
			return getRuleContext(IfthenelseContext.class,0);
		}
		public CtrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterCtrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitCtrl(this);
		}
	}

	public final CtrlContext ctrl() throws RecognitionException {
		CtrlContext _localctx = new CtrlContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ctrl);
		try {
			setState(100);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); ifthenelse();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(98); whiledo();
				}
				break;
			case FOREACH:
				enterOuterAlt(_localctx, 3);
				{
				setState(99); foreach();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfthenelseContext extends ParserRuleContext {
		public List<TerminalNode> RIGHT_BRACE() { return getTokens(AsteroidsParserParser.RIGHT_BRACE); }
		public EvalContext eval(int i) {
			return getRuleContext(EvalContext.class,i);
		}
		public TerminalNode THEN() { return getToken(AsteroidsParserParser.THEN, 0); }
		public List<EvalContext> eval() {
			return getRuleContexts(EvalContext.class);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> LEFT_BRACE() { return getTokens(AsteroidsParserParser.LEFT_BRACE); }
		public TerminalNode RIGHT_BRACE(int i) {
			return getToken(AsteroidsParserParser.RIGHT_BRACE, i);
		}
		public TerminalNode ELSE() { return getToken(AsteroidsParserParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(AsteroidsParserParser.IF, 0); }
		public TerminalNode LEFT_BRACE(int i) {
			return getToken(AsteroidsParserParser.LEFT_BRACE, i);
		}
		public IfthenelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifthenelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterIfthenelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitIfthenelse(this);
		}
	}

	public final IfthenelseContext ifthenelse() throws RecognitionException {
		IfthenelseContext _localctx = new IfthenelseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifthenelse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(IF);
			setState(103); expr(0);
			setState(105);
			_la = _input.LA(1);
			if (_la==THEN) {
				{
				setState(104); match(THEN);
				}
			}

			setState(107); match(LEFT_BRACE);
			setState(108); eval();
			setState(109); match(RIGHT_BRACE);
			setState(115);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(110); match(ELSE);
				setState(111); match(LEFT_BRACE);
				setState(112); eval();
				setState(113); match(RIGHT_BRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhiledoContext extends ParserRuleContext {
		public TerminalNode RIGHT_BRACE() { return getToken(AsteroidsParserParser.RIGHT_BRACE, 0); }
		public TerminalNode DO() { return getToken(AsteroidsParserParser.DO, 0); }
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(AsteroidsParserParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LEFT_BRACE() { return getToken(AsteroidsParserParser.LEFT_BRACE, 0); }
		public WhiledoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whiledo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterWhiledo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitWhiledo(this);
		}
	}

	public final WhiledoContext whiledo() throws RecognitionException {
		WhiledoContext _localctx = new WhiledoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whiledo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(WHILE);
			setState(118); expr(0);
			setState(120);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(119); match(DO);
				}
			}

			setState(122); match(LEFT_BRACE);
			setState(123); eval();
			setState(124); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForeachContext extends ParserRuleContext {
		public TerminalNode RIGHT_BRACE() { return getToken(AsteroidsParserParser.RIGHT_BRACE, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(AsteroidsParserParser.LEFT_PAREN, 0); }
		public TerminalNode DO() { return getToken(AsteroidsParserParser.DO, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AsteroidsParserParser.RIGHT_PAREN, 0); }
		public TerminalNode FOREACH() { return getToken(AsteroidsParserParser.FOREACH, 0); }
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(AsteroidsParserParser.COMMA, 0); }
		public TerminalNode LEFT_BRACE() { return getToken(AsteroidsParserParser.LEFT_BRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public EntityspecContext entityspec() {
			return getRuleContext(EntityspecContext.class,0);
		}
		public ForeachContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreach; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterForeach(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitForeach(this);
		}
	}

	public final ForeachContext foreach() throws RecognitionException {
		ForeachContext _localctx = new ForeachContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_foreach);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(FOREACH);
			setState(127); match(LEFT_PAREN);
			setState(128); entityspec();
			setState(129); match(COMMA);
			setState(130); match(IDENTIFIER);
			setState(131); match(RIGHT_PAREN);
			setState(133);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(132); match(DO);
				}
			}

			setState(135); match(LEFT_BRACE);
			setState(136); eval();
			setState(137); match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(AsteroidsParserParser.ASSIGN, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(IDENTIFIER);
			setState(140); match(ASSIGN);
			setState(141); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctioncallContext extends ParserRuleContext {
		public TerminalNode LEFT_PAREN() { return getToken(AsteroidsParserParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(AsteroidsParserParser.RIGHT_PAREN, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(AsteroidsParserParser.COMMA, i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AsteroidsParserParser.COMMA); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode IDENTIFIER() { return getToken(AsteroidsParserParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunctioncallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functioncall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).enterFunctioncall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AsteroidsParserListener ) ((AsteroidsParserListener)listener).exitFunctioncall(this);
		}
	}

	public final FunctioncallContext functioncall() throws RecognitionException {
		FunctioncallContext _localctx = new FunctioncallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functioncall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); type();
			setState(144); match(IDENTIFIER);
			setState(145); match(LEFT_PAREN);
			setState(154);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SELF) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << GETRADIUS) | (1L << GETX) | (1L << GETY) | (1L << GETVX) | (1L << GETVY) | (1L << GETDIR) | (1L << SQRT) | (1L << SIN) | (1L << COS) | (1L << NOT) | (1L << NUMBER) | (1L << IDENTIFIER) | (1L << LEFT_PAREN))) != 0)) {
				{
				setState(146); expr(0);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(147); match(COMMA);
					setState(148); expr(0);
					}
					}
					setState(153);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(156); match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
